--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jmx-rt-mon",
+  "name": "hpulse",
   "version": "0.0.0",
   "dependencies": {
     "gzippo": "~0.2.0",
@@ -30,7 +30,8 @@
     "time-grunt": "~0.1.0",
     "karma-ng-html2js-preprocessor": "~0.1.0",
     "karma-ng-scenario": "~0.1.0",
-    "grunt-karma": "~0.6.2"
+    "grunt-karma": "~0.6.2",
+    "shelljs": "~0.2.6"
   },
   "engines": {
     "node": ">=0.8.0"
